Fix z-index issue with drawer

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body.markoff-visible .drawer {
     background: #fff;
     position: fixed;
     top: 120px;
+    top: 195px;
     left: 50%;
     text-align: center;
     padding: 20px;
